[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
regex = { version = "^1", default-features = false }
semver = "^1"
serde = "^1"
serde_json = "^1"
thiserror = "^2"

clean-path = "0.2.1"
indexmap = "2.7.0"
miette = "7.4.0"
petgraph = { version = "0.6.5", default-features = false, features = [
    "serde-1",
] }
relative-path = "1.9.3"
rustc-hash = "2.1.0"
serde_yaml = "0.9.34"
starbase_sandbox = "0.8.0"
starbase_utils = { version = "0.9.1", default-features = false }
